# business-agentic-ai-platform

./: .env.example  .gitignore  ARCHITECTURE.md  CAARE_SYLLABUS.md  MISSION.md  README.md  SPEC-001-MVP.md  openapi.json  pyproject.toml
.claude/: settings.local.json
frontend/: LOGIC_BUG_FIX.md  ROUTING_EXAMPLES.md  TIMEOUT_FIXES.md  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/chat/: route.ts
src/al_buraq/: __init__.py  config.py  server.py  tunnel.py
src/al_buraq/agents/: __init__.py  dispatch_agent.py  hunter_agent.py  investigator_agent.py  sales_agent.py
src/al_buraq/analysis/: __init__.py  identity_scanner.py
src/al_buraq/cli/: __init__.py  main.py
src/al_buraq/db/: __init__.py  repository.py  vectors.py
src/al_buraq/filters/: __init__.py  halal_filter.py
src/al_buraq/hunters/: __init__.py  base_hunter.py  csv_hunter.py  fmcsa_hunter.py
src/al_buraq/models/: __init__.py  carrier.py  enums.py  lead.py  load.py
src/al_buraq/scoring/: __init__.py  lead_scorer.py
tests/: __init__.py  test_constitution.py
