[project]
name = "al-buraq"
version = "0.1.0"
description = "Ethical AI Dispatch System - Halal Truck Dispatching"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Al-Buraq Team"}
]
keywords = ["dispatch", "trucking", "ai", "agents", "halal"]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "anthropic>=0.18",
    "chromadb>=0.4",
    "sqlalchemy>=2.0",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "typer>=0.9",
    "rich>=13.0",
    "aiosqlite>=0.19",
    "pandas>=2.0",
    "duckduckgo-search>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
alburaq = "al_buraq.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/al_buraq"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
